--- a/views/twocol/twocol.scss
+++ b/views/twocol/twocol.scss
@@ -51,8 +51,19 @@ $view: '.view-twocol';
   }
 
   @media screen and (max-width: $screenSmallMax) {
+    .topspan {
+      margin-top: 30px;
+    }
     .main {
+      display: block;
 
+      .col1,.col2 {
+        display: block;
+        width: 100%;
+      }
+      .col2 {
+        margin-top: 50px;
+      }
     }
   }
 }
